# RB_SDK

./: .gitignore  LICENSE  README.md  RaceBearSDK_API.md  RaceBearSDK_FRONTEND_GUIDE.md
examples/: README.md
examples/RaceBearMotionStudio/: README.md  RaceBearMotionStudio.sln  RaceBearMotionStudio.vcxproj  RaceBearMotionStudio.vcxproj.filters  SDK_COVERAGE.md  SDK_GAPS.md
examples/RaceBearMotionStudio/docs/: RaceBearSDK_API.md  RaceBearSDK_PUBLIC_GAP_AUDIT.md
examples/RaceBearMotionStudio/include/: RaceBearSDK.h
examples/RaceBearMotionStudio/src/: App.cpp  App.h  SdkRuntime.cpp  SdkRuntime.h  Ui.cpp  Ui.h  main.cpp
examples/RaceBearMotionStudio/src/pages/: EffectsPages.cpp  GamePage.cpp  HardwarePages.cpp  Pages.h  PlatformPage.cpp  SettingsPages.cpp  StatusPages.cpp
examples/RaceBearMotionStudio/tests/: ComprehensiveTest.cpp  SaveRoundTrip.cpp  Smoke.cpp
examples/cpp/: CMakeLists.txt  README.md  configuration_examples.cpp  configuration_examples.h  custom_game_example.cpp  custom_game_example.h  main.cpp
examples/python/: README.md  example.py  racebear_sdk.py
examples/qt/: README.md
include/: RaceBearSDK.h
tools/: Publish-Release.ps1
